; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_real.c_getpath.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_real.c_getpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"/proc/self/fd/%d\00", align 1
@MAX_PATH = common dso_local global i64 0, align 8
@F_GETPATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @getpath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getpath(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca [20 x i8], align 16
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 0
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @sprintf(i8* %7, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 0
  %11 = load i8*, i8** %4, align 8
  %12 = load i64, i64* @MAX_PATH, align 8
  %13 = sub nsw i64 %12, 1
  %14 = call i64 @readlink(i8* %10, i8* %11, i64 %13)
  store i64 %14, i64* %6, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp uge i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load i8*, i8** %4, align 8
  %19 = load i64, i64* %6, align 8
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  store i8 0, i8* %20, align 1
  br label %21

21:                                               ; preds = %17, %2
  %22 = load i64, i64* %6, align 8
  %23 = trunc i64 %22 to i32
  ret i32 %23
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i64 @readlink(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
